# mcp-server-client-poc

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README-TEMPLATE.md  README.md  azure-pipeline.yaml  coverage.xml  docker-compose.yml  mypy.ini  pyproject.toml  sonar-project.properties
.pytest_cache/v/cache/: nodeids
deploy/: docker_build_push.sh
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0618756b1ff51bca___init___py.html  z_0618756b1ff51bca_config_py.html  z_0618756b1ff51bca_logger_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_2804e40980a64c7d___init___py.html  z_2804e40980a64c7d_server_py.html  z_652c2a627971f736_jwt_bearer_py.html  z_9941ded6d139044f_example_tool_py.html  z_dd4b322c5e9a5c17_example_tool_py.html  z_dd4b322c5e9a5c17_version_py.html  z_de05559f4338c853_registration_py.html  z_f1b38b22aeb65474___init___py.html  z_f1b38b22aeb65474_auth_py.html  z_f1b38b22aeb65474_ent_headers_py.html  z_f6289f8b1be60a9f_base_py.html
scripts/: export_sonar_token.py  sonar_scan.py  sonar_setup.py
src/: main.py
src/client/: mcp_client.py  mcp_client_1.py
src/core/: config.py  logger.py
src/middleware/: jwt_bearer.py
src/schemas/: example_tool.py  inventory.py  version.py
src/server/: server.py
src/tools/: registration.py
src/tools/impl/: CRUD_tools.py  example_tool.py  inventory_tools.py  retail_tools.py
src/tools/impl/data/: inventory.xlsx  retails-mockdata.json
src/tools/meta/: base.py
src/utils/: auth.py  ent_headers.py
tests/: main_test.py
tests/middleware/: jwt_bearer_test.py
tests/server/: server_test.py
tests/tools/: base_test.py  registration_test.py
tests/utils/: auth_test.py  ent_headers_test.py
